// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component snapshots BodyBuyCrypto snapshot 1`] = `
<main
  className="body"
>
  <div
    className="input body__child"
    onClick={[Function]}
  >
    <label>
      I want to buy
    </label>
    <div
      className="input__type input__type--selector"
    >
      <img
        alt="Icon"
        className="input__type__child input__icon "
        src="btc.svg"
      />
      <span
        className="input__type__child "
        style={
          Object {
            "order": "unset",
          }
        }
      >
        BTC
      </span>
      <img
        alt="Chevron right"
        className="input__type__child input__icon input__icon--chevron"
        src="chevron_right.svg"
      />
    </div>
  </div>
  <div
    className="body__child row-fields"
  >
    <div
      className="input row-fields__child grow"
    >
      <label>
        <span
          className="label__title"
        >
          Amount
        </span>
      </label>
      <div
        className="input__type input__type--number   "
      >
        <span
          before-content=""
          className="input__type__child symbol  "
          style={
            Object {
              "order": "unset",
            }
          }
        >
          <input
            disabled={false}
            min="0"
            name="amount"
            onChange={[Function]}
            onInput={[Function]}
            placeholder="100"
            step="any"
            type="number"
            value={100}
          />
        </span>
      </div>
    </div>
    <div
      className="input row-fields__child"
      onClick={[Function]}
    >
      <label>
        Currency
      </label>
      <div
        className="input__type input__type--selector"
      >
        <img
          alt="Icon"
          className="input__type__child input__icon "
          src="btc.svg"
        />
        <span
          className="input__type__child "
          style={
            Object {
              "order": "unset",
            }
          }
        >
          BTC
        </span>
        <img
          alt="Chevron right"
          className="input__type__child input__icon input__icon--chevron"
          src="chevron_right.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="input body__child"
    onClick={[Function]}
  >
    <label>
      Payment method
    </label>
    <div
      className="input__type input__type--selector"
    >
      <img
        alt="Icon"
        className="input__type__child input__icon input__type__child--old-first"
        src="btc.svg"
      />
      <span
        className="input__type__child input__type__child--new-first"
        style={
          Object {
            "order": -1,
          }
        }
      >
        BTC
      </span>
      <img
        alt="Chevron right"
        className="input__type__child input__icon input__icon--chevron"
        src="chevron_right.svg"
      />
    </div>
  </div>
  <div
    className="expected-crypto body__child grow"
  >
    <span
      className="expected-crypto__amount"
    >
      Fetching best price...
    </span>
    <span
      className="expected-crypto__info"
    >
      Crypto you get
       (estimation)
    </span>
  </div>
  <div
    className="body__child"
  >
    <button
      className="button-action "
      disabled={false}
      onClick={[Function]}
    >
      Get crypto
    </button>
  </div>
</main>
`;

exports[`Component snapshots ExpectedCrypto snapshot 1`] = `
<div
  className="expected-crypto undefined"
>
  <span
    className="expected-crypto__amount"
  >
    0 BTC
  </span>
  <span
    className="expected-crypto__info"
  >
    Crypto you get
     (estimation)
  </span>
</div>
`;

exports[`Component snapshots Footer snapshot 1`] = `
<footer
  className="footer"
>
  <span>
    Powered by
  </span>
  <img
    alt="logo"
    src="logo.svg"
  />
</footer>
`;

exports[`Component snapshots Header snapshot 1`] = `
<nav
  className="header"
>
  <h1
    className="header__child"
  >
    Buy crypto
  </h1>
  <img
    alt="menu"
    className="header__child header__burger-icon"
    onClick={[Function]}
    src="burger_menu.svg"
  />
</nav>
`;

exports[`Component snapshots Header with backbutton snapshot 1`] = `
<nav
  className="header"
>
  <img
    alt="Back"
    className="header__child header__back-icon"
    onClick={[Function]}
    src="left_arrow.svg"
  />
  <h1
    className="header__child"
  >
    Buy crypto
  </h1>
  <img
    alt="menu"
    className="header__child header__burger-icon"
    onClick={[Function]}
    src="burger_menu.svg"
  />
</nav>
`;

exports[`Component snapshots InputButton snapshot 1`] = `
<div
  className="input "
>
  <label>
    Label
  </label>
  <div
    className="input__type input__type--selector"
  >
    <img
      alt="Icon"
      className="input__type__child input__icon "
      src="btc.svg"
    />
    <span
      className="input__type__child "
      style={
        Object {
          "order": "unset",
        }
      }
    >
      BTC
    </span>
    <img
      alt="Chevron right"
      className="input__type__child input__icon input__icon--chevron"
      src="chevron_right.svg"
    />
  </div>
</div>
`;

exports[`Component snapshots InputText snapshot 1`] = `
<div
  className="input "
>
  <label>
    Label
  </label>
  <div
    className="input__type input__type--number   "
  >
    <span
      className="input__type__child symbol  "
      style={
        Object {
          "order": "unset",
        }
      }
    >
      <input
        disabled={false}
        min="0"
        name="example"
        onChange={[Function]}
        type="text"
      />
    </span>
  </div>
</div>
`;

exports[`Component snapshots List snapshot 1`] = `
<div
  className="list"
>
  <div
    className="list-item"
    onClick={[Function]}
  >
    <img
      alt="Icon"
      className="list-item__child list-item__icon"
      src="btc.svg"
    />
    <div
      className="list-item__child"
    >
      <span>
        BTC
      </span>
      <span
        className="list-item__info"
      >
        Bitcoin
      </span>
    </div>
  </div>
</div>
`;
